--show-flapping-icon
git-svn-id: http://localhost/svn/cs/trunk@253 425ee2a7-4875-4123-be73-356ab870d09e